test/compile-fail/scope/use-no-name-rename/expected.txt
error: unresolved import `b`
 --> top.rhdl:3:7
  |
3 | use a::b as c;
  |        ^ no `b` in `a`
